# dr-manhattan-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
drm-core/: Cargo.toml  README.md
drm-core/src/: error.rs  lib.rs
drm-core/src/exchange/: config.rs  factory.rs  mod.rs  rate_limit.rs  traits.rs
drm-core/src/models/: crypto_hourly.rs  market.rs  mod.rs  order.rs  orderbook.rs  position.rs  trade.rs
drm-core/src/strategy/: mod.rs  order_tracker.rs  traits.rs
drm-core/src/utils/: price.rs
drm-core/src/websocket/: traits.rs
drm-examples/: Cargo.toml
drm-exchange-kalshi/: Cargo.toml  README.md
drm-exchange-kalshi/src/: auth.rs  config.rs  error.rs  exchange.rs  lib.rs
drm-exchange-kalshi/tests/: exchange_tests.rs
drm-exchange-limitless/: Cargo.toml  README.md
drm-exchange-limitless/src/: clob.rs  config.rs  error.rs  exchange.rs  websocket.rs
drm-exchange-limitless/tests/: exchange_tests.rs
drm-exchange-opinion/: Cargo.toml  README.md
drm-exchange-opinion/src/: config.rs  error.rs  exchange.rs
drm-exchange-opinion/tests/: exchange_tests.rs
drm-exchange-polymarket/: Cargo.toml  README.md
drm-exchange-polymarket/src/: client.rs  clob.rs  config.rs  error.rs  exchange.rs  lib.rs  websocket.rs
drm-exchange-polymarket/tests/: exchange_tests.rs
drm-exchange-predictfun/: Cargo.toml  README.md
drm-exchange-predictfun/examples/: test_api.rs
drm-exchange-predictfun/src/: config.rs  error.rs  exchange.rs
drm-exchange-predictfun/tests/: exchange_tests.rs
