[package]
name = "drm-examples"
description = "Examples for dr-manhattan prediction market SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
drm-core = { workspace = true }
drm-exchange-polymarket = { workspace = true }
drm-exchange-limitless = { workspace = true }
drm-exchange-opinion = { workspace = true }
drm-exchange-kalshi = { workspace = true }
drm-exchange-predictfun = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "list-markets"
path = "src/bin/list_markets.rs"

[[bin]]
name = "watch-orderbook"
path = "src/bin/watch_orderbook.rs"
