[package]
name = "drm-exchange-opinion"
description = "Opinion exchange implementation for dr-manhattan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
drm-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
