[package]
name = "drm-exchange-polymarket"
description = "Polymarket exchange implementation for dr-manhattan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
drm-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ethers = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"
