[package]
name = "drm-exchange-polymarket"
description = "Polymarket exchange implementation for dr-manhattan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
drm-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ethers = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"
